--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -12,13 +12,13 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html#about">Yangiliklar</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Tuzilma</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'news' %}">Yangiliklar</a></li>
+          <li><a class="nav-link scrollto" href="index.html#team">Tuzilma</a></li>
           <li class="dropdown"><a href="#"><span>Ilmiy</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="index.html" class="active">Laboratoriyalar</a></li>
-              <li><a href="index-2.html">Loyihalar</a></li>
-              <li><a href="index-3.html">Ilmiy-uslubiy ishlar</a></li>
+              <li><a href="{% url 'home' %}" class="active">Laboratoriyalar</a></li>
+              <li><a href="{% url 'home' %}">Loyihalar</a></li>
+              <li><a href="{% url 'home' %}">Ilmiy-uslubiy ishlar</a></li>
             </ul>
           </li>
 
@@ -66,7 +66,7 @@
 <!--              <li><a href="#">Drop Down 4</a></li>-->
 <!--            </ul>-->
 <!--          </li>-->
-          <li><a class="nav-link scrollto" href="{% url 'home' %}#contact">Aloqa</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'home' %}#contact">Biz haqimizda</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
