--- a/templates/customizer/home.html
+++ b/templates/customizer/home.html
@@ -28,12 +28,12 @@
 
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-      <img src="{% static 'assets/img/hero-carousel/hero-carousel-3.svg' %}" class="img-fluid animated">
-      <h2>Welcome to <span>HeroBiz</span></h2>
-      <p>Et voluptate esse accusantium accusamus natus reiciendis quidem voluptates similique aut.</p>
+      <img src="{% static 'logo.png' %}" class="img-fluid animated">
+      <h2>OʻZBEKISTON RESPUBLIKASI YOSHLAR SIYOSATI VA SPORT VAZIRLIGI HUZURIDAGI JISMONIY TARBIYA VA SPORT ILMIY TADQIQOTLAR INSTITUTI</h2>
+<!--      <p>Et voluptate esse accusantium accusamus natus reiciendis quidem voluptates similique aut.</p>-->
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+        <a href="#about" class="btn-get-started scrollto">Bog'lanish</a>
+<!--        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
       </div>
     </div>
   </section>
