--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -4,21 +4,23 @@
   <header id="header" class="header fixed-top" data-scrollto-offset="0">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="{% url 'home' %}" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+      <a href="{% url 'home' %}" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>HeroBiz<span>.</span></h1>
+<!--         <img src="{% static 'logo.png' %}" alt="" width="100">-->
+<!--        <h1>HeroBiz<span>.</span></h1>-->
+        <h1></h1>
+
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html#about">Yangiliklar</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Tuzilma</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'home' %}#about">Yangiliklar</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'home' %}#services">Tuzilma</a></li>
           <li class="dropdown"><a href="#"><span>Ilmiy</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="index.html" class="active">Laboratoriyalar</a></li>
-              <li><a href="index-2.html">Loyihalar</a></li>
-              <li><a href="index-3.html">Ilmiy-uslubiy ishlar</a></li>
+              <li><a href="{% url 'home' %}" class="active">Laboratoriyalar</a></li>
+              <li><a href="{% url 'home' %}">Loyihalar</a></li>
+              <li><a href="{% url 'home' %}">Ilmiy-uslubiy ishlar</a></li>
             </ul>
           </li>
 
