--- a/templates/customizer/news.html
+++ b/templates/customizer/news.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog - HeroBiz Bootstrap Template</title>
+  <title>JISMONIY TARBIYA VA SPORT ILMIY TADQIQOTLAR INSTITUTI</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
